--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "node-fetch": "^2.6.11",
-    "dotenv": "^16.4.1"
+    "dotenv": "^16.4.1",
+    "express-rate-limit": "^7.0.0"
   },
   "license": "ISC"
 }
